--- a/GMM_EM_Pyspark_Product.ipynb
+++ b/GMM_EM_Pyspark_Product.ipynb
@@ -133,11 +133,17 @@
     "\n",
     "### Randomly assign cluster to each row of data\n",
     "\n",
-    "### pi: $\\pi_{j} = \\frac{|c_{i}=j|}{n}$\n",
+    "### pi: \n",
     "\n",
-    "### mean_vector: $\\mu_{j} =  \\frac{\\sum (x_{i}|c_{i}=j)}{|c_{i}=j|}$\n",
+    "# $\\pi_{j} = \\frac{|c_{i}=j|}{n}$\n",
     "\n",
-    "###  covariance_matrixes: $\\Sigma_{j} = \\frac{\\sum{((x_i-\\mu_{j})^{T} \\cdot (x_i-\\mu_{j})|c_{i}=j)} }{|c_{i}=j|-1}$"
+    "### mean_vector: \n",
+    "\n",
+    "# $\\mu_{j} =  \\frac{\\sum (x_{i}|c_{i}=j)}{|c_{i}=j|}$\n",
+    "\n",
+    "###  covariance_matrixes: \n",
+    "\n",
+    "# $\\Sigma_{j} = \\frac{\\sum{((x_i-\\mu_{j})^{T} \\cdot (x_i-\\mu_{j})|c_{i}=j)} }{|c_{i}=j|-1}$"
    ]
   },
   {
@@ -201,7 +207,7 @@
     "\n",
     "### Calculate a \"soft\" assignment of each row to each cluster, which is r matrix:\n",
     "\n",
-    "### $r_{ij} = \\frac{\\pi_{j} N(x_{i}|\\mu_{j}, \\Sigma_{j})}{\\sum_{c=1}^{k}\\pi_{c} N(x_{i}| \\mu_{c}, \\Sigma_{c})}$\n",
+    "# $r_{ij} = \\frac{\\pi_{j} N(x_{i}|\\mu_{j}, \\Sigma_{j})}{\\sum_{c=1}^{k}\\pi_{c} N(x_{i}| \\mu_{c}, \\Sigma_{c})}$\n",
     "\n",
     "### 3.M - STEP\n",
     "\n",
@@ -209,17 +215,17 @@
     "\n",
     "### Update for mean_vector\n",
     "\n",
-    "### $\\mu_{j} =  \\frac{\\sum_{i=1}^{n} (r_{ij} \\space \\times \\space x_{i})}{\\sum_{i=1}^{n} r_{ij}}$\n",
+    "# $\\mu_{j} =  \\frac{\\sum_{i=1}^{n} (r_{ij} \\space \\times \\space x_{i})}{\\sum_{i=1}^{n} r_{ij}}$\n",
     "\n",
     "### Update for covariance_matrixes\n",
     "\n",
-    "### $\\Sigma_{j} = \\frac{\\sum_{i=1}^{n}{r_{ij} \\space \\times \\space ((x_i-\\mu_{j})^{T} \\cdot (x_i-\\mu_{j}))} }{\\sum_{i=1}^{n} r_{ij}}$\n",
+    "# $\\Sigma_{j} = \\frac{\\sum_{i=1}^{n}{r_{ij} \\space \\times \\space ((x_i-\\mu_{j})^{T} \\cdot (x_i-\\mu_{j}))} }{\\sum_{i=1}^{n} r_{ij}}$\n",
     "\n",
     "### Update for pi list\n",
     "\n",
     "### $\\pi_{j} = \\frac{\\sum_{i=1}^{n} r_{ij}}{n}$\n",
     "\n",
-    "### 4.Repeat 2 and 3 max_iter times"
+    "# 4.Repeat 2 and 3 max_iter times"
    ]
   },
   {
@@ -371,9 +377,9 @@
    "source": [
     "###  log-likelihood of Gaussian Mixture Model\n",
     "\n",
-    "### $l(\\theta)=\\sum_{i=1}^{n}log(\\sum_{c=1}^{k}\\pi_{c} N(x_{i}| \\mu_{c}, \\Sigma_{c}))$\n",
+    "# $l(\\theta)=\\sum_{i=1}^{n}log(\\sum_{c=1}^{k}\\pi_{c} N(x_{i}| \\mu_{c}, \\Sigma_{c}))$\n",
     "\n",
-    "### where $\\theta = \\{\\mu_{1},...,\\mu_{k},\\Sigma_{1},...,\\Sigma_{k},\\pi_{1},...,\\pi_{k}\\}$"
+    "# where $\\theta = \\{\\mu_{1},...,\\mu_{k},\\Sigma_{1},...,\\Sigma_{k},\\pi_{1},...,\\pi_{k}\\}$"
    ]
   },
   {
